--- a/Projects.ipynb
+++ b/Projects.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNtL6AdDcL27aKbeT5ejBwF",
+      "authorship_tag": "ABX9TyPDsbvvX2bgjspyKWHGEGZA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -62,7 +62,7 @@
         "id": "90rFntALw7UK",
         "outputId": "55241129-369e-461d-c5a0-e1274b794713"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -98,7 +98,7 @@
         "id": "E7HxHVA-x3kk",
         "outputId": "cfdd58c4-3953-490f-dc0b-27cdbfb07c5b"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -123,26 +123,85 @@
     {
       "cell_type": "code",
       "source": [
-        "num_1 : int = int(input(\"Enter a number: \"))\n",
-        "print(f\"Your number is: {num_1}\")\n",
-        "print(f\"Doube of this number is {num_1*2}\")"
+        "# Get user Input\n",
+        "user_input = int(input(\"Enter a number: \"))\n",
+        "# Loop While & For\n",
+        "# 2 4 8 16 64 128\n",
+        "while user_input <= 100:\n",
+        "    user_input *= 2\n",
+        "    print(user_input, end = \" \")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "m90rErVOy8DY",
-        "outputId": "b0f9b84e-0907-4a14-8222-7ba63358567b"
+        "outputId": "7713e92d-e7e9-4573-a17d-e8cde08a050f"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Enter a number: 2\n",
-            "Your number is: 2\n",
-            "Doube of this number is 4\n"
+            "4 8 16 32 64 128 "
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Project 3\n"
+      ],
+      "metadata": {
+        "id": "kDFxE-Xap_Vi"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "message = \"Liftoff!\"\n",
+        "\n",
+        "# 1. Loop : For\n",
+        "# List or range\n",
+        "\n",
+        "# start position 10, end position 0, step = -1\n",
+        "def countdown():\n",
+        "  for i in range(10,0, -1):\n",
+        "   print(i, end = \" \")\n",
+        "  print(message)\n",
+        "\n",
+        "countdown()\n",
+        "\n",
+        "\n",
+        "# using List\n",
+        "\n",
+        "number_list: list[int] = [10,9,8,7,6,5,4,3,2,1]\n",
+        "\n",
+        "def countdown2():\n",
+        "  for i in number_list:\n",
+        "    print(i, end = \" \")\n",
+        "  print(message)\n",
+        "\n",
+        "countdown2()\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IGVEC1mgqBiR",
+        "outputId": "a02ca5d9-240b-4740-c658-37e97ddff9e3"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10 9 8 7 6 5 4 3 2 1 Liftoff!\n",
+            "10 9 8 7 6 5 4 3 2 1 Liftoff!\n"
           ]
         }
       ]
