Guessing game project

--- a/Projects.ipynb
+++ b/Projects.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPDsbvvX2bgjspyKWHGEGZA",
+      "authorship_tag": "ABX9TyPE31bhNheSZpVUn2DFWt8k",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -194,7 +194,7 @@
         "id": "IGVEC1mgqBiR",
         "outputId": "a02ca5d9-240b-4740-c658-37e97ddff9e3"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -202,6 +202,77 @@
           "text": [
             "10 9 8 7 6 5 4 3 2 1 Liftoff!\n",
             "10 9 8 7 6 5 4 3 2 1 Liftoff!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Project 4 Guess My Number"
+      ],
+      "metadata": {
+        "id": "ahlOMXgZt3Nf"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random\n",
+        "\n",
+        "random_number = random.randint(0,100)\n",
+        "print(random_number)\n",
+        "\n",
+        "allowed_attempts: int = 5\n",
+        "user_attempts: int = 0\n",
+        "\n",
+        "while user_attempts < allowed_attempts:\n",
+        "  print(f\"Attemps Left: {allowed_attempts - user_attempts}\")\n",
+        "  user_input: int = int(input(\"Guess a number: \"))\n",
+        "  user_attempts += 1\n",
+        "  if(user_input == random_number):\n",
+        "    print(\"You guessed it!\")\n",
+        "    break\n",
+        "  elif user_input > random_number:\n",
+        "    print(\"Too High!\")\n",
+        "  elif user_input < random_number:\n",
+        "    print(\"Too Low!\")\n",
+        "  else:\n",
+        "    print(\"Invalid Input\")\n",
+        "\n",
+        "if(user_attempts == allowed_attempts):\n",
+        "  print(\"Game Over\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fRUK-3uIu4TA",
+        "outputId": "cbfedffd-4ac3-49e9-91a8-e8439088abf3"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "89\n",
+            "Attemps Left: 5\n",
+            "Guess a number: 90\n",
+            "Too High!\n",
+            "Attemps Left: 4\n",
+            "Guess a number: 100\n",
+            "Too High!\n",
+            "Attemps Left: 3\n",
+            "Guess a number: 20\n",
+            "Too Low!\n",
+            "Attemps Left: 2\n",
+            "Guess a number: 0\n",
+            "Too Low!\n",
+            "Attemps Left: 1\n",
+            "Guess a number: 80\n",
+            "Too Low!\n",
+            "Game Over\n"
           ]
         }
       ]
