--- a/Projects.ipynb
+++ b/Projects.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPE31bhNheSZpVUn2DFWt8k",
+      "authorship_tag": "ABX9TyOCk8/62ZZ37z61RV+HReZ2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -250,7 +250,7 @@
         "id": "fRUK-3uIu4TA",
         "outputId": "cbfedffd-4ac3-49e9-91a8-e8439088abf3"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -273,6 +273,88 @@
             "Guess a number: 80\n",
             "Too Low!\n",
             "Game Over\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Project 4 : Random Numbers"
+      ],
+      "metadata": {
+        "id": "3eHxtY_uW4lT"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Print 10 random numbers in the range 1 to 100\n",
+        "\n",
+        "# Example 45 79 61 47 52 10 16 83 19 12\n",
+        "\n",
+        "import random\n",
+        "MIN_NUMBER:int =  1\n",
+        "MAX_NUMBER:int = 100\n",
+        "N_RANDOM_NUMBERS:int = 10\n",
+        "\n",
+        "# Function\n",
+        "# 1. Use For Loop\n",
+        "number_list = []\n",
+        "\n",
+        "for i in range(N_RANDOM_NUMBERS):\n",
+        "  random_number = random.randint(MIN_NUMBER, MAX_NUMBER)\n",
+        "  number_list.append(random_number)\n",
+        "print(*number_list)\n",
+        "# To store the 10 numbers we will use list\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BdXUPkGqW7rw",
+        "outputId": "01883322-878c-4be1-b813-c38a0420d93e"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "41 56 10 9 69 61 5 71 21 41\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "MIN_NUMBER:int =  1\n",
+        "MAX_NUMBER:int = 101\n",
+        "N_RANDOM_NUMBERS:int = 10\n",
+        "\n",
+        "import numpy as np\n",
+        "# numpy is numerical python\n",
+        "\n",
+        "random_numbers = np.random.randint(MIN_NUMBER, MAX_NUMBER, N_RANDOM_NUMBERS)\n",
+        "print(*random_numbers)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RA2U_h-Da162",
+        "outputId": "d939f36b-bc1d-44b2-f8e9-332d59331861"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "76 26 32 92 54 100 50 7 56 3\n"
           ]
         }
       ]
