--- a/Projects.ipynb
+++ b/Projects.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOCk8/62ZZ37z61RV+HReZ2",
+      "authorship_tag": "ABX9TyMfbttHyrTFYttIFLs6fp07",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -317,7 +317,7 @@
         "id": "BdXUPkGqW7rw",
         "outputId": "01883322-878c-4be1-b813-c38a0420d93e"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -348,13 +348,55 @@
         "id": "RA2U_h-Da162",
         "outputId": "d939f36b-bc1d-44b2-f8e9-332d59331861"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "76 26 32 92 54 100 50 7 56 3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Project 5 weight calculation on moon"
+      ],
+      "metadata": {
+        "id": "IAxR1K01VK4Z"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "  def get_mars_weight():\n",
+        "    MARS_CONSTANT: float = 0.378\n",
+        "    user_weight: float = float(input(\"What is your weight? \"))\n",
+        "    mars_weight = round((user_weight * MARS_CONSTANT), 2)\n",
+        "\n",
+        "    return mars_weight\n",
+        "\n",
+        "my_weight_on_mars = get_mars_weight()\n",
+        "\n",
+        "print(f\"Your weight on mars is {my_weight_on_mars} kg\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3o28iYvyVU0C",
+        "outputId": "69bd0df8-11ac-4029-8ed3-69dd03b64f0e"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "What is your weight? 120\n",
+            "Your weight on mars is 45.36 kg\n"
           ]
         }
       ]
