--- a/Projects.ipynb
+++ b/Projects.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMfbttHyrTFYttIFLs6fp07",
+      "authorship_tag": "ABX9TyOFeYOJoaxW450/H4gRQJYE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -380,7 +380,9 @@
         "\n",
         "my_weight_on_mars = get_mars_weight()\n",
         "\n",
-        "print(f\"Your weight on mars is {my_weight_on_mars} kg\")"
+        "print(f\"Your weight on mars is {my_weight_on_mars} kg\")\n",
+        "\n",
+        "# solving basic problems using arithematics"
       ],
       "metadata": {
         "colab": {
@@ -389,7 +391,7 @@
         "id": "3o28iYvyVU0C",
         "outputId": "69bd0df8-11ac-4029-8ed3-69dd03b64f0e"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
