weights on different planets

--- a/Projects.ipynb
+++ b/Projects.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOFeYOJoaxW450/H4gRQJYE",
+      "authorship_tag": "ABX9TyO+Cv/9WUMWSSe53Kppvfdr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -399,6 +399,56 @@
           "text": [
             "What is your weight? 120\n",
             "Your weight on mars is 45.36 kg\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# prompt: create all the constants of planets in percentage in a variable\n",
+        "\n",
+        "PLANETS_PERCENTAGE = {\n",
+        "    'mercury': 0.38,\n",
+        "    'venus': 0.91,\n",
+        "    'earth': 1.00,\n",
+        "    'mars': 0.38,\n",
+        "    'jupiter': 2.53,\n",
+        "    'saturn': 1.06,\n",
+        "    'uranus': 0.89,\n",
+        "    'neptune': 1.14\n",
+        "}\n",
+        "\n",
+        "def get_weight_on_planets():\n",
+        "    user_weight: float = float(input(\"What is your weight on earth? \"))\n",
+        "    planet_name: str = input(\"What is your planet name? \")\n",
+        "\n",
+        "    if planet_name.lower() in PLANETS_PERCENTAGE:\n",
+        "        weight_on_planet = round((user_weight * PLANETS_PERCENTAGE[planet_name]), 2)\n",
+        "        print(f\"Your weight on {planet_name} is {weight_on_planet} kg\")\n",
+        "    else:\n",
+        "        print(\"Invalid planet name\")\n",
+        "\n",
+        "get_weight_on_planets()\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tzwt3GAbHKRw",
+        "outputId": "904af9d5-3783-4249-e27f-fdd1321ac45d"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "What is your weight on earth? 90\n",
+            "What is your planet name? mars\n",
+            "Your weight on mars is 34.2 kg\n"
           ]
         }
       ]
