args and kwargs

--- a/Projects.ipynb
+++ b/Projects.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO+Cv/9WUMWSSe53Kppvfdr",
+      "authorship_tag": "ABX9TyNuhpHnNKpR1ZUgJFN0Qzy+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -424,7 +424,7 @@
         "    planet_name: str = input(\"What is your planet name? \")\n",
         "\n",
         "    if planet_name.lower() in PLANETS_PERCENTAGE:\n",
-        "        weight_on_planet = round((user_weight * PLANETS_PERCENTAGE[planet_name]), 2)\n",
+        "        weight_on_planet = (user_weight * PLANETS_PERCENTAGE[planet_name]), 2)\n",
         "        print(f\"Your weight on {planet_name} is {weight_on_planet} kg\")\n",
         "    else:\n",
         "        print(\"Invalid planet name\")\n",
@@ -440,7 +440,7 @@
         "id": "tzwt3GAbHKRw",
         "outputId": "904af9d5-3783-4249-e27f-fdd1321ac45d"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -449,6 +449,148 @@
             "What is your weight on earth? 90\n",
             "What is your planet name? mars\n",
             "Your weight on mars is 34.2 kg\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Working with *args and **kwrags\n"
+      ],
+      "metadata": {
+        "id": "o_ZF9CO25JL1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# for use of dictionary **kwargs\n",
+        "\n",
+        "def sum_of_numbers(**lodhi):\n",
+        "  for key, value in lodhi.items():\n",
+        "    print(f\"{key} : {value}\")\n",
+        "\n",
+        "sum_of_numbers(firstName = \"Mohsin\", lastName = \"Khan\", city = \"Islamabad\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fCOvEees9szi",
+        "outputId": "d5be741d-5f52-4724-ed1b-c85ec1df3555"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "firstName : Mohsin\n",
+            "lastName : Khan\n",
+            "city : Islamabad\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# function with multiple postional Arguments\n",
+        "\n",
+        "def multiply_numbers(*args):\n",
+        "  result = 1\n",
+        "  for num in args:\n",
+        "    result *=num\n",
+        "  return result\n",
+        "\n",
+        "print(multiply_numbers(1,2,4))\n",
+        "\n",
+        "numbers = [1,2,3,4,5]\n",
+        "print(multiply_numbers(*numbers))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "M9DzgSwkIiEl",
+        "outputId": "3c96d414-0196-4616-a256-53859959b997"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "8\n",
+            "120\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Passing a list as an argument\n",
+        "\n",
+        "def greet(**kwargs):\n",
+        "  if 'name' in kwargs:\n",
+        "    print(f\"Hello {kwargs['name']}!\")\n",
+        "  else:\n",
+        "    print(\"Hello Guest!\")\n",
+        "\n",
+        "greet(name ='Bob')\n",
+        "greet()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ELsh6D6nOUn9",
+        "outputId": "cbb505ec-0fe5-4748-f9b7-57370602d3f5"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello Bob!\n",
+            "Hello Guest!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def order_pizza(size,*toppings,**details):\n",
+        "  print(f\"Size:{size}\")\n",
+        "  print(f\"Toppings:{' or '.join(toppings)}\")\n",
+        "  print(f\"Details:\")\n",
+        "  for key,value in details.items():\n",
+        "    print(f\"{key}: {value}\")\n",
+        "\n",
+        "order_pizza(\"Large\",\"cheese\",\"chicken\",\"mushrooms\",name=\"Mohsin\",delivery_time =\"18:00\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yYhaFaHhbPMi",
+        "outputId": "ec403481-e9ba-4b8f-a782-48d76dad7cc4"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Size:Large\n",
+            "Toppings:cheese or chicken or mushrooms\n",
+            "Details:\n",
+            "name: Mohsin\n",
+            "delivery_time: 18:00\n"
           ]
         }
       ]
