--- a/Projects.ipynb
+++ b/Projects.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNuhpHnNKpR1ZUgJFN0Qzy+",
+      "authorship_tag": "ABX9TyNtf2GbeNGutf3VSHrqPy/y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -591,6 +591,36 @@
             "Details:\n",
             "name: Mohsin\n",
             "delivery_time: 18:00\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# HangMan\n",
+        "\n",
+        "\n",
+        "word_list = ['Mohsin','Honda','Civic']\n",
+        "for word in word_list:\n",
+        "  print(word.split(' '))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7XcVo24fWWxt",
+        "outputId": "1dff89ec-3f13-43c1-8389-ffd02d3694d0"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Mohsin']\n",
+            "['Honda']\n",
+            "['Civic']\n"
           ]
         }
       ]
