--- a/HangMan.ipynb
+++ b/HangMan.ipynb
@@ -1,20 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyMOgslrUTkAc9D7R+kgSQyK",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -28,24 +12,13 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "\n"
-      ],
-      "metadata": {
-        "id": "VIYGPVW-5pWX"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "JTNr6mNtfmYR",
-        "outputId": "aca70e69-3b94-42a3-b75d-8e62bbe8e3df"
+        "outputId": "f4520aea-d24e-44c4-b4a1-8b2d6cc6347d"
       },
       "outputs": [
         {
@@ -53,27 +26,37 @@
           "name": "stdout",
           "text": [
             "you have 5 tries left and you used these letters:  \n",
-            "Current word:  - - - - -\n",
-            "Guess a letter: a\n",
-            "you have 5 tries left and you used these letters:  a\n",
-            "Current word:  a - - - -\n",
+            "Current word:  - - - - - - - -\n",
+            "Guess a letter: p\n",
+            "Letter not in the word\n",
+            "you have 4 tries left and you used these letters:  p\n",
+            "Current word:  - - - - - - - -\n",
             "Guess a letter: o\n",
             "Letter not in the word\n",
-            "you have 4 tries left and you used these letters:  o a\n",
-            "Current word:  a - - - -\n",
-            "Guess a letter: p\n",
-            "you have 4 tries left and you used these letters:  p o a\n",
-            "Current word:  a p p - -\n",
-            "Guess a letter: l\n",
-            "you have 4 tries left and you used these letters:  p o a l\n",
-            "Current word:  a p p l -\n",
+            "you have 3 tries left and you used these letters:  o p\n",
+            "Current word:  - - - - - - - -\n",
+            "Guess a letter: a\n",
+            "you have 3 tries left and you used these letters:  o p a\n",
+            "Current word:  - - - - - - a -\n",
+            "Guess a letter: i\n",
+            "you have 3 tries left and you used these letters:  o i p a\n",
+            "Current word:  i - - - - - a -\n",
+            "Guess a letter: c\n",
+            "you have 3 tries left and you used these letters:  o p i c a\n",
+            "Current word:  i c - c - - a -\n",
             "Guess a letter: e\n",
-            "You won the word was apple\n"
+            "you have 3 tries left and you used these letters:  o p i c a e\n",
+            "Current word:  i c e c - e a -\n",
+            "Guess a letter: r\n",
+            "you have 3 tries left and you used these letters:  o r p i c a e\n",
+            "Current word:  i c e c r e a -\n",
+            "Guess a letter: m\n",
+            "You won the word was icecream\n"
           ]
         }
       ],
       "source": [
-        "\n",
+        "#Project 2 HangMan\n",
         "\n",
         "import random\n",
         "import string\n",
@@ -86,6 +69,7 @@
         "\n",
         "  return word\n",
         "\n",
+        "a\n",
         "\n",
         "def hangman():\n",
         "  word = get_word(words)\n",
@@ -94,10 +78,8 @@
         "  used_letters = set()\n",
         "\n",
         "  no_of_tries = 5\n",
-        "\n",
         "  while len(letters_in_word) > 0 and no_of_tries > 0:\n",
         "    print(f\"you have {no_of_tries} tries left and you used these letters: \", \" \".join(used_letters))\n",
-        "\n",
         "\n",
         "    word_list = []\n",
         "    for letter in word:\n",
@@ -128,5 +110,21 @@
         "hangman()\n"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": [],
+      "authorship_tag": "ABX9TyMtc1BbnLJEeWFjNLk+cJL/",
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
