--- a/CountDown.ipynb
+++ b/CountDown.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOSPo1e2Pedti8uRry0R+57",
+      "authorship_tag": "ABX9TyMmf5DhCSdzzNFgBEYVTvtm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,11 @@
         "\n",
         "hrs: int = int(input(\"Enter hours: \"))\n",
         "mins: int = int(input(\"Enter minues: \"))\n",
-        "secs: int = int(input(\"Enter hours: \"))\n"
+        "secs: int = int(input(\"Enter hours: \"))\n",
+        "\n",
+        "# Still ntn here\n",
+        "\n",
+        "# I did learn about OOP Today, class , objects, properties, self keyword\n"
       ]
     }
   ]
