--- a/Class09_Assignment.ipynb
+++ b/Class09_Assignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMf/Iq1Lc9ZMKGVVZhZH/GA",
+      "authorship_tag": "ABX9TyMQAUCKazH1IA4ELbWLNJvN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -106,7 +106,7 @@
         "id": "SNizDXCOQgFU",
         "outputId": "0e8a2e60-2a01-4a17-e6df-e68563e4dd81"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -145,7 +145,7 @@
         "id": "jldEabG0SDaj",
         "outputId": "5b7b4937-ad6d-4a44-90d7-5663aaeb9862"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -190,7 +190,7 @@
         "id": "o6_Psd1zTXAW",
         "outputId": "d86248a5-6afc-4ed9-a8d6-23945d509eb0"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -218,24 +218,38 @@
         "      return self.age == obj.age\n",
         "    return NotImplemented\n",
         "\n",
-        "person1 = Person(\"Mohsin\",27)\n",
+        "  def __ge__(self,obj):\n",
+        "    if isinstance(obj,Person):\n",
+        "      return self.age >= obj.age\n",
+        "    return NotImplemented\n",
+        "\n",
+        "  def __le__(self,obj):\n",
+        "    if isinstance(obj,Person):\n",
+        "      return self.age <= obj.age\n",
+        "    return NotImplemented\n",
+        "\n",
+        "person1 = Person(\"Mohsin\",30)\n",
         "person2 = Person(\"Ali\",27)\n",
         "print(person1 == person2)\n",
-        "print(person1 != person2)"
+        "print(person1 != person2)\n",
+        "print(person1 >= person2)\n",
+        "print(person1 <= person2)\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "iVqVu1cRlgIg",
-        "outputId": "3eb33a2c-e02a-4dc4-c546-6e709a9a9c0a"
+        "outputId": "6ca9a25a-8852-403d-fac8-fd5bb77431a0"
       },
-      "execution_count": 25,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "False\n",
+            "True\n",
             "True\n",
             "False\n"
           ]
