--- a/Projects.ipynb
+++ b/Projects.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNtf2GbeNGutf3VSHrqPy/y",
+      "authorship_tag": "ABX9TyN5UxD0IXfnqeSciZHr3lYr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -598,32 +598,53 @@
     {
       "cell_type": "code",
       "source": [
-        "# HangMan\n",
-        "\n",
-        "\n",
-        "word_list = ['Mohsin','Honda','Civic']\n",
-        "for word in word_list:\n",
-        "  print(word.split(' '))\n"
+        " a = 5000\n",
+        " b = 5000\n",
+        " print(a is b)"
       ],
       "metadata": {
+        "id": "Eavy9t3ll7J9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "7XcVo24fWWxt",
-        "outputId": "1dff89ec-3f13-43c1-8389-ffd02d3694d0"
+        "outputId": "edbd7195-cd4b-402b-8a9b-5cff0b380182"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "['Mohsin']\n",
-            "['Honda']\n",
-            "['Civic']\n"
+            "False\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# countDown\n",
+        "\n",
+        "import time\n",
+        "def Countdown():\n",
+        "  time."
+      ],
+      "metadata": {
+        "id": "mKW_nFMi8jNK"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# new propmpt"
+      ],
+      "metadata": {
+        "id": "DDVgDN6eT5IW"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
